--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,9 @@ body {
   padding: 0;
   margin: 0;
   overflow-x: hidden !important;
+  animation: fadeInAnimation ease 1s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
   font-family: "pretendard";
 }
 
@@ -957,6 +960,83 @@ header .scrolled {
   100% {
     transform: translate(-50%, -50%) rotate(-1turn);
   }
+}
+
+.fusion-section {
+  position: relative;
+  z-index: 1;
+  background: #23282F;
+  padding: 150px 0 144px 0;
+  margin-bottom: 100px;
+}
+.fusion-section::before {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 46.3%;
+  height: 100%;
+  content: "";
+  background: #2E333A;
+  z-index: -1;
+}
+.fusion-section .fusion-inner {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 140px;
+}
+@media (max-width: 1440px) {
+  .fusion-section .fusion-inner {
+    gap: 108px;
+  }
+}
+.fusion-section .fusion-inner .left-section p {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px;
+  letter-spacing: 4.32px;
+  padding-left: 61px;
+  position: relative;
+  margin-bottom: 20px;
+}
+.fusion-section .fusion-inner .left-section p::before {
+  position: absolute;
+  left: 0;
+  top: 13px;
+  height: 1px;
+  content: "";
+  width: 52px;
+  background-color: white;
+}
+.fusion-section .fusion-inner .left-section h2 {
+  color: white;
+  font-size: 46px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 59px;
+  margin-bottom: 0;
+}
+.fusion-section .fusion-inner .right-section {
+  padding-left: 50px;
+}
+.fusion-section .fusion-inner .right-section p {
+  color: rgba(255, 255, 255, 0.8);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+  margin-bottom: 20px;
+}
+.fusion-section .fusion-inner .right-section .last-para {
+  margin-bottom: 0;
+}
+.fusion-section .fusion-inner .right-section .last-para span {
+  color: #C4E50F;
+}
+.fusion-section .bottom-block-image img {
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
