--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -244,6 +244,7 @@ header {
     }
   }
 }
+
 // Header 
 
 // Top Banner Box 
@@ -413,6 +414,7 @@ header {
     }
   }
 }
+
 // Top Banner Box 
 
 // Why Box Section 
@@ -525,6 +527,7 @@ header {
     }
   }
 }
+
 // Why Box Section 
 
 // Billing Section 
@@ -762,6 +765,7 @@ header {
     }
   }
 }
+
 // Billing Section 
 
 // Who wr are Section 
@@ -1140,7 +1144,8 @@ header {
         // border: 2px solid #ddd;
         border-radius: 5px;
         overflow: hidden;
-        &::after{
+
+        &::after {
           position: absolute;
           left: 0;
           top: 0;
@@ -1227,16 +1232,18 @@ header {
     }
   }
 }
+
 // Who wr are Section 
 
 // Fusion Section 
-.fusion-section{
+.fusion-section {
   position: relative;
   z-index: 1;
   background: #23282F;
   padding: 150px 0 144px 0;
   margin-bottom: 100px;
-  &::before{
+
+  &::before {
     position: absolute;
     right: 0;
     top: 0;
@@ -1246,18 +1253,21 @@ header {
     background: #2E333A;
     z-index: -1;
   }
-  .fusion-inner{
+
+  .fusion-inner {
     // display: flex;
     // flex-direction: row;
     // justify-content: space-between;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 140px;
-    @media(max-width: 1440px){
+
+    @media(max-width: 1440px) {
       gap: 108px;
     }
-    .left-section{
-      p{
+
+    .left-section {
+      p {
         color: rgba(255, 255, 255, 0.60);
         font-size: 18px;
         font-style: normal;
@@ -1267,7 +1277,8 @@ header {
         padding-left: 61px;
         position: relative;
         margin-bottom: 20px;
-        &::before{
+
+        &::before {
           position: absolute;
           left: 0;
           top: 13px;
@@ -1277,7 +1288,8 @@ header {
           background-color: $white;
         }
       }
-      h2{
+
+      h2 {
         color: $white;
         font-size: 46px;
         font-style: normal;
@@ -1286,29 +1298,737 @@ header {
         margin-bottom: 0;
       }
     }
-    .right-section{
+
+    .right-section {
       padding-left: 50px;
-      p{
+
+      p {
         color: rgba(255, 255, 255, 0.80);
         font-style: normal;
         font-weight: 400;
         line-height: 26px;
         margin-bottom: 20px;
       }
-      .last-para{
+
+      .last-para {
         margin-bottom: 0;
-        span{
+
+        span {
           color: #C4E50F;
         }
       }
     }
   }
-  .bottom-block-image{
-    img{
+
+  .bottom-block-image {
+    img {
       position: absolute;
       left: 0;
       bottom: 0;
     }
   }
 }
+
 // Fusion Section 
+
+// Key Services Section 
+.key-services-section {
+  margin-bottom: 80px;
+
+  .key-services-inner {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 40px;
+
+    .left-section {
+      width: 624px;
+
+      .left-inner {
+        position: relative;
+        border-radius: 18px;
+        background: lightgray 0px -238.108px / 100% 168.287% no-repeat;
+
+        .image-box {
+          img {
+            width: 100%;
+          }
+        }
+
+        .up-text-wrapper {
+          border-radius: 12px;
+          border: 1px solid #DDD;
+          background: #23282F;
+          box-shadow: 15px 15px 60px 0px rgba(0, 0, 0, 0.10);
+          padding: 29px 50px 27px 30px;
+          position: absolute;
+          left: -30px;
+          bottom: 30px;
+
+          h2 {
+            color: $white;
+            font-size: 38px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 49px;
+            margin-bottom: 20px;
+          }
+
+          p {
+            margin-bottom: 0;
+            color: rgba(255, 255, 255, 0.80);
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 26px;
+
+            span {
+              color: $white;
+              text-decoration: underline;
+            }
+          }
+        }
+      }
+    }
+
+    .right-section {
+      width: 616px;
+
+      .right-inner {
+        .key-services-box {
+          display: flex;
+          flex-direction: column;
+          gap: 15px;
+
+          .key-box {
+            border-radius: 8px;
+            border: 1px solid #ddd;
+            background-color: $white;
+            display: flex;
+            flex-direction: row;
+            gap: 20px;
+            padding: 19px 20px 19px 20px;
+            transition: 0.3s ease-in-out;
+
+            .left-icon-box {
+              width: 32px;
+              height: 32px;
+              padding: 6px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              border-radius: 4px;
+              border: 1px solid #ddd;
+              background-color: #f5f6f8;
+              transition: 0.3s ease-in-out;
+
+              svg {
+                // fill: black;
+                color: #000;
+                transition: 0.3s ease-in-out;
+              }
+            }
+
+            .right-content-box {
+              h4 {
+                color: $black;
+                font-size: 20px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 30px;
+                margin-bottom: 20px;
+              }
+
+              p {
+                margin-bottom: 0;
+                color: rgba(0, 0, 0, 0.60);
+                font-style: normal;
+                font-weight: 400;
+                line-height: 26px;
+              }
+            }
+
+            &:hover {
+              background-color: #f5f6f8;
+
+              .left-icon-box {
+                background-color: #1482ff;
+                border-color: #1482ff;
+
+                svg {
+                  color: #fff;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+// Key Services Section 
+
+// Benifits Member Section 
+.benifits-member-section {
+  padding: 100px 0;
+  background: linear-gradient(180deg, rgba(65, 130, 255, 0.00) 0%, rgba(65, 130, 255, 0.12) 100%);
+
+  .benifits-member-inner {
+    padding-bottom: 62px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 107px;
+
+    .left-section {
+      width: 577px;
+
+      h2 {
+        color: $black;
+        font-size: 46px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 56px;
+        margin-bottom: 0;
+
+        span {
+          background: rgba(196, 229, 15, 0.50);
+          border-radius: 8px;
+          padding: 0 7px;
+        }
+      }
+    }
+
+    .right-section {
+      width: 596px;
+
+      p {
+        color: rgba(0, 0, 0, 0.80);
+        font-style: normal;
+        font-weight: 400;
+        line-height: 26px;
+        margin-bottom: 20px;
+      }
+
+      .last-para {
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  .benifits-inner-box-wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+
+    .benifits-box {
+      border-radius: 18px;
+      border: 1px solid #ddd;
+      background-color: $white;
+      padding: 30px 27px;
+      transition: 0.3s ease-in-out;
+
+      .top-icon-content-box {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 35px;
+        margin-bottom: 35px;
+
+        .icon-box {
+          width: 43px;
+          height: 43px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding: 8.447px 8.446px 8.446px 8.447px;
+          border-radius: 6.143px;
+          border: 0.768px solid #DDD;
+          background: #F5F6F8;
+          transition: 0.3s ease-in-out;
+
+          svg {
+            transition: 0.3s ease-in-out;
+          }
+        }
+
+        .title-content {
+          h4 {
+            margin-bottom: 0;
+            color: #4182FF;
+            font-style: normal;
+            font-size: 20px;
+            font-weight: 600;
+            line-height: 30px;
+          }
+        }
+      }
+
+      .content-box {
+        p {
+          font-weight: 400;
+          line-height: 26px;
+          margin-bottom: 26px;
+
+          span {
+            color: rgba(0, 0, 0, 0.90);
+            font-weight: 500;
+          }
+        }
+
+        .last-para {
+          margin-bottom: 0;
+        }
+      }
+
+      &:hover {
+        background: #F5F6F8;
+
+        .top-icon-content-box {
+          .icon-box {
+            background: #4182FF;
+            border-color: #1482ff;
+
+            svg {
+              color: #fff;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+// Benifits Member Section 
+
+// Success Stories Section 
+.success-stories-section {
+  padding: 130px 0 60px 0;
+  background-color: $white;
+
+  .success-stories-inner {
+    .success-stories-container {
+      // padding-left: 80px;
+      position: relative;
+      z-index: 1;
+      // max-width: 1440px;
+      // margin-left: auto;
+      // margin-right: auto;
+
+      .success-stories-top-title-wrapper {
+        margin-bottom: 61px;
+        max-width: 1440px;
+        margin-left: auto;
+        margin-right: auto;
+        @media(max-width: 1440px){
+          padding: 0 80px;
+        }
+
+        h2 {
+          color: $black;
+          font-family: $font-inter;
+          font-size: 46px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 56px;
+          margin-bottom: 0;
+        }
+      }
+
+      .success-stories-slider-wrapper {
+        padding-left: 12%;
+        @media(max-width: 1440px){
+          padding-left: 80px;
+        }
+
+        .success-stories-slider {
+          .item {
+            .item-inner {
+              border-radius: 18px;
+              border: 1px solid #ddd;
+              background-color: $white;
+              transition: 0.3s ease-in-out;
+              padding: 30px;
+
+              .quote-box {
+                margin-bottom: 20px;
+
+                img {
+                  width: 30px;
+                }
+              }
+
+              .title-box {
+                margin-bottom: 54px;
+
+                h4 {
+                  color: $black;
+                  font-size: 24px;
+                  font-style: normal;
+                  font-weight: 500;
+                  line-height: 34px;
+                  margin-bottom: 0;
+                }
+              }
+
+              .paragraph-content {
+                margin-bottom: 24px;
+                min-height: 78px;
+
+                p {
+                  color: rgba(0, 0, 0, 0.80);
+                  font-style: normal;
+                  font-weight: 400;
+                  line-height: 26px;
+                  margin-bottom: 0;
+                }
+              }
+
+              .user-designation-box {
+                display: flex;
+                flex-direction: row;
+                gap: 20px;
+
+                .user-image {
+                  img {
+                    width: 58px;
+                    height: 58px;
+                    border-radius: 50%;
+                    object-fit: cover;
+                  }
+                }
+
+                .designation-content {
+                  h6 {
+                    color: $black;
+                    font-size: 20px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 28px;
+                    margin-bottom: 4px;
+                  }
+
+                  p {
+                    color: rgba(0, 0, 0, 0.60);
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 26px;
+                    margin-bottom: 0;
+                  }
+                }
+              }
+
+              &:hover {
+                background-color: #f5f6f8;
+              }
+            }
+          }
+
+          .owl-nav {
+            margin-top: 0;
+
+            button {
+              margin: 0;
+              padding: 19px;
+              border-radius: 8px;
+              border: 1px solid #ddd;
+              background: $white;
+              width: 62px;
+              height: 62px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              transition: 0.3s ease-in-out;
+
+              span {
+                font-size: 24px;
+                color: $black;
+                transition: 0.3s ease-in-out;
+              }
+
+              &:hover {
+                background-color: #4182ff;
+
+                span {
+                  color: $white;
+                }
+              }
+            }
+
+            .owl-prev {
+              position: absolute;
+              right: 157px;
+              top: -120px;
+            }
+
+            .owl-next {
+              position: absolute;
+              right: 80px;
+              top: -120px;
+            }
+
+            // .disabled{
+            //   opacity: 1;
+            //   background-color: $white;
+            //   span{
+            //     color: $black;
+            //   }
+            // }
+          }
+        }
+      }
+    }
+  }
+}
+
+// Success Stories Section 
+
+// Management Issues Section 
+.management-issues-section {
+  padding: 100px 0;
+  position: relative;
+  z-index: 1;
+
+  .management-issues-inner {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 147px;
+
+    .left-section {
+      width: 558px;
+
+      h2 {
+        color: $black;
+        font-size: 38px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 48px;
+        margin-bottom: 20px;
+      }
+
+      h4 {
+        color: $black;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 34px;
+        margin-bottom: 20px;
+      }
+
+      p {
+        color: rgba(0, 0, 0, 0.80);
+        font-style: normal;
+        font-weight: 400;
+        line-height: 26px;
+        margin-bottom: 40px;
+      }
+
+      .link-wrapper {
+        a {
+          display: inline-flex;
+          padding: 15px 30px;
+          justify-content: center;
+          align-items: center;
+          gap: 10px;
+          border-radius: 8px;
+          background-color: #4182ff;
+          text-decoration: none;
+          color: $white;
+          font-weight: 500;
+          line-height: 26px;
+          border: 1px solid #4182FF;
+          transition: 0.3s ease-in-out;
+
+          span {
+            transition: 0.3s ease-in-out;
+          }
+
+          &:hover {
+            background-color: transparent;
+            color: $theme-color;
+
+            span {
+              transform: translateX(12px);
+            }
+          }
+        }
+      }
+    }
+
+    .right-section {
+      width: 575px;
+
+      .management-issues-inner-box {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+        .issues-box {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          gap: 15px;
+          border-radius: 12px;
+          border: 1px solid #ddd;
+          background-color: $white;
+          padding: 20px 32px 20px 17px;
+          transition: 0.3s ease-in-out;
+
+          .icon-box {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            width: 40px;
+            height: 40px;
+            border-radius: 8px;
+            border: 1px solid #ddd;
+            background-color: $white;
+            transition: 0.3s ease-in-out;
+
+            svg {
+              transition: 0.3s ease-in-out;
+            }
+          }
+
+          .content-box {
+            p {
+              margin-bottom: 0;
+            }
+          }
+
+          &:hover {
+            background-color: #f5f6f8;
+          }
+        }
+      }
+    }
+  }
+
+  .issues-box {
+    img {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      z-index: -1;
+    }
+  }
+}
+
+// Management Issues Section 
+
+// Footer 
+.footer-section {
+  background: #23282F;
+  padding-top: 51px;
+
+  .footer-inner {
+    padding-bottom: 45px;
+    display: flex;
+    flex-direction: row;
+
+    .left-logo-box {
+      margin-right: 86px;
+
+      a {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        font-size: 21px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 28.089px;
+        text-decoration: none;
+        color: $white;
+
+        img {
+          margin-right: 10px;
+          max-width: 25px;
+        }
+      }
+    }
+
+    .foote-details {
+      margin-right: 172px;
+
+      .title {
+        h4 {
+          color: rgba(255, 255, 255, 0.80);
+          font-size: 18px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 28.089px;
+          margin-bottom: 17px;
+        }
+      }
+
+      .footer-address {
+        p {
+          color: rgba(255, 255, 255, 0.60);
+          font-style: normal;
+          font-weight: 400;
+          line-height: 28.089px;
+          margin-bottom: 10px;
+
+          a {
+            text-decoration: none;
+            color: rgba(255, 255, 255, 0.60);
+
+            &:hover {
+              text-decoration: underline;
+            }
+          }
+        }
+
+        .last-para {
+          margin-bottom: 0;
+        }
+      }
+    }
+
+    .footer-link {
+      .title {
+        height: 37.09px;
+        h4 {}
+      }
+
+      .footer-right-address {
+        p {
+          color: rgba(255, 255, 255, 0.60);
+          font-style: normal;
+          font-weight: 400;
+          line-height: 28.089px;
+          margin-bottom: 10px;
+
+          a {
+            text-decoration: none;
+            color: rgba(255, 255, 255, 0.60);
+
+            &:hover {
+              text-decoration: underline;
+            }
+          }
+        }
+
+        .last-para {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+  .footer-copyright{
+    background: #2E333A;
+    padding: 22px 0;
+    p{
+      text-align: center;
+      margin-bottom: 0;
+      color: $white;
+      font-weight: 500;
+      line-height: 26px;
+    }
+  }
+}
+
+// Footer 
